<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="slogan">Convert Anything, Anytime.</string>
    <string name="enter_value">Enter Value</string>
    <string name="swap_units">Swap Units</string>
    <string name="convert">Convert</string>
    <string name="select_category">Select Category</string>
    <string name="from_unit">From Unit</string>
    <string name="to_unit">To Unit</string>
    <string name="result_placeholder">Result will appear here</string>
    <string name="result_text">Result: %1$s %2$s</string>
</resources>