<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- App Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/unit_converter"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Slogan -->
        <TextView
            android:id="@+id/tvSlogan"
            android:text="@string/slogan"
            android:textSize="14sp"
            android:textColor="@color/primaryDark"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Card Layout -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="16dp"
            app:strokeWidth="1dp"
            app:strokeColor="#DDDDDD">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Category Spinner -->
                <TextView
                    android:text="@string/select_category"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- From Unit Spinner -->
                <TextView
                    android:text="@string/from_unit"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- To Unit Spinner -->
                <TextView
                    android:text="@string/to_unit"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinnerTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Input Text -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_value"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etInput"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Convert Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConvert"
                    android:text="@string/convert"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    app:backgroundTint="@color/accentColor"
                    android:textColor="#FFFFFF"/>

                <!-- Result -->
                <TextView
                    android:id="@+id/tvResult"
                    android:text="@string/result_placeholder"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FF073A"
                    android:shadowColor="#FF073A"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="18" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
